--- a/edrar/templates/edrar/edrar_base_template.html
+++ b/edrar/templates/edrar/edrar_base_template.html
@@ -156,6 +156,7 @@
     <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="{% static 'edrar/js/sb-admin-2.min.js' %}"></script>
+    <script src="{% static 'edrar/js/jwt.js' %}"></script>
     {% block customJs %}
     {% endblock %}
 
