--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -319,6 +319,12 @@
                 {{form.counterpart}}
             </div>
         </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="project_name">Project name</label>
+                {{form.project_name}}
+            </div>
+        </div>
     </div>
 
     <div class="row mx-3 mt-1 general-input-container">
