--- a/edrar/templates/edrar/home.html
+++ b/edrar/templates/edrar/home.html
@@ -5,12 +5,13 @@
     <div class="row">
         <div class="col">
             <a href="{% url 'edrar_log' %}" class="btn btn-primary"><i class="fa fa-plus mr-2" aria-hidden="true"></i>Log Activity</a>
+            <a href="{% url 'datatable_device' %}" class="btn btn-secondary"><i class="fa fa-database mr-2" aria-hidden="true"></i>AID</a>
             <button class="btn btn-secondary"><i class="fa fa-download mr-2" aria-hidden="true"></i>Generate Report</button>
         </div>
         <div class="col">
-            <div class="float-right">
+            <!-- <div class="float-right">
                 <button class="btn btn-dark" data-toggle="modal" data-target="#filterModalCenter"><i class="fa fa-filter mr-2" aria-hidden="true"></i>Filter</button>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
