Final beta version v1.0.0

--- a/edrar/templates/edrar/home.html
+++ b/edrar/templates/edrar/home.html
@@ -5,8 +5,8 @@
     <div class="row">
         <div class="col">
             <a href="{% url 'edrar_log' %}" class="btn btn-primary"><i class="fa fa-plus mr-2" aria-hidden="true"></i>Log Activity</a>
-            <a href="{% url 'datatable_device' %}" class="btn btn-secondary"><i class="fa fa-database mr-2" aria-hidden="true"></i>AID</a>
-            <button class="btn btn-secondary"><i class="fa fa-download mr-2" aria-hidden="true"></i>Generate Report</button>
+            <a href="{% url 'datatable_device' %}" class="btn btn-info"><i class="fa fa-database mr-2" aria-hidden="true"></i>AID</a>
+            <a href="{% url 'edrar_report' %}" class="btn btn-warning"><i class="fa fa-download mr-2" aria-hidden="true"></i>Generate Report</a>
         </div>
         <div class="col">
             <!-- <div class="float-right">
