--- a/edrar/templates/edrar/edrar_base_template.html
+++ b/edrar/templates/edrar/edrar_base_template.html
@@ -27,7 +27,8 @@
     <link href="{% static 'edrar/css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link href="{% static 'edrar/css/navbar-top-fixed.css' %}" rel="stylesheet">
     <link href="{% static 'edrar/css/custom.css' %}" rel="stylesheet">
-
+    {% block customCSS %}
+    {% endblock %}
 </head>
 
 <body id="page-top">
@@ -43,7 +44,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                    <a class="navbar-brand" href="#">Daily RAN Activities</a>
+                    <a class="navbar-brand" href="{% url 'edrar_home' %}">Daily RAN Activities</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -67,10 +68,15 @@
                                 </a>
                                 <!-- Dropdown - User Information -->
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="{% url 'edrar_user' %}">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Profile
                                     </a>
+                                    <a class="dropdown-item" href="{% url 'edrar_user_change_password' %}">
+                                        <i class="fas fa-fingerprint fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Change Password
+                                    </a>
+                                    <!--
                                     <a class="dropdown-item" href="#">
                                         <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Settings
@@ -79,6 +85,7 @@
                                         <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Activity Log
                                     </a>
+                                    -->
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -155,6 +162,7 @@
     <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script src="{% static 'edrar/js/sb-admin-2.min.js' %}"></script>
     <script src="{% static 'edrar/js/jwt.js' %}"></script>
     {% block customJs %}
